# fft-dsp-toolkit

./: .gitignore  CMakeLists.txt  LINKEDIN_POST.txt  Makefile  PROJECT_EXPANSION_PLAN.md  README.md  TEST_PUSH.txt
chapters/: 00-overview.md  01-complex-numbers.c  01-complex-numbers.md  01-signals-and-sequences.c  01-signals-and-sequences.md  02-fft-fundamentals.c  02-fft-fundamentals.md  02-sampling-and-aliasing.c  02-sampling-and-aliasing.md  03-complex-numbers.c  03-window-functions.c  03-window-functions.md  04-digital-filters.c  04-digital-filters.md  04-lti-systems.c  04-lti-systems.md  05-spectral-analysis.c  05-spectral-analysis.md  05-z-transform.c  05-z-transform.md  06-frequency-response.c  06-frequency-response.md  06-real-time-streaming.md  07-dft-theory.c  07-dft-theory.md  07-optimisation.md  08-putting-it-together.c  08-putting-it-together.md  09-window-functions.md  11-iir-filter-design.c  11-iir-filter-design.md  12-filter-structures.c  12-filter-structures.md  14-psd-welch.md  15-correlation.md  16-overlap-add-save.md  17-multirate-dsp.c  17-multirate-dsp.md  18-fixed-point.md  19-advanced-fft.md  (+21 more)
chapters/00-overview/: README.md  course_overview.puml
chapters/01-signals-and-sequences/: README.md  signal_classification.puml
chapters/02-sampling-and-aliasing/: README.md  sampling_pipeline.puml
chapters/03-complex-numbers/: README.md  complex_plane.puml
chapters/04-lti-systems/: README.md  lti_system.puml
chapters/05-z-transform/: README.md  z_transform.puml
chapters/06-frequency-response/: README.md  freq_response_flow.puml
chapters/07-dft-theory/: README.md  dft_analysis_synthesis.puml
chapters/08-fft-fundamentals/: README.md
chapters/09-window-functions/: README.md  window_tradeoff.puml
chapters/10-digital-filters/: README.md  fir_structure.puml
chapters/11-iir-filter-design/: README.md  iir_design_flow.puml
chapters/12-filter-structures/: README.md  filter_structures.puml
chapters/13-spectral-analysis/: README.md
chapters/14-psd-welch/: README.md  welch_method.puml
chapters/15-correlation/: README.md  correlation_uses.puml
chapters/16-overlap-add-save/: README.md  ola_ols_pipeline.puml
chapters/17-multirate-dsp/: README.md  multirate_chain.puml
chapters/18-fixed-point/: README.md  fixed_point_format.puml
chapters/19-advanced-fft/: README.md  goertzel_dtmf.puml
chapters/20-hilbert-transform/: README.md  analytic_signal.puml
chapters/21-signal-averaging/: README.md  averaging_methods.puml
chapters/22-advanced-fir/: README.md  remez_design.puml
chapters/23-adaptive-filters/: README.md  adaptive_loop.puml
chapters/24-linear-prediction/: README.md  lpc_model.puml
chapters/25-parametric-spectral/: README.md  music_algorithm.puml
chapters/26-cepstrum-mfcc/: README.md  mfcc_pipeline.puml
chapters/27-2d-dsp/: README.md  image_processing.puml
chapters/28-real-time-streaming/: README.md
chapters/29-optimisation/: README.md
chapters/30-putting-it-together/: README.md  capstone_pipeline.puml
docs/: API.md  ARCHITECTURE.md  COMMIT_CHECKLIST.md  GITIGNORE_GUIDE.md  README.md
docs/diagrams/: README.md  api_reference.puml  architecture.puml  benchmarks.puml  fft_sequence.puml  modules.puml  optimization_roadmap.puml  realtime_architecture.puml  roadmap.puml  signal_flow.puml  use_cases.puml
include/: adaptive.h  averaging.h  cepstrum.h  convolution.h  dsp2d.h  dsp_utils.h  fft.h  filter.h  hilbert.h  iir.h  lpc.h  multirate.h  optimization.h  realtime.h  remez.h  signal_gen.h  spectral_est.h
reference/: API.md  ARCHITECTURE.md  CHAPTER_INDEX.md  README.md  dsp_references.md  fft_notes.md
reference/diagrams/: README.md  api_reference.puml  architecture.puml  modules.puml  plantuml_render.py  realtime_architecture.puml  render_diagrams.sh  roadmap.puml  use_cases.puml
src/: adaptive.c  averaging.c  cepstrum.c  convolution.c  dsp2d.c  dsp_utils.c  fft.c  filter.c  hilbert.c  iir.c  lpc.c  multirate.c  optimization.c  realtime.c  remez.c  signal_gen.c  spectral_est.c  spectrum.c
tests/: test_iir.c  test_phase5.c  test_phase6.c  test_phase7.c
tools/: generate_plots.c
